src/objects/FieloAlpha__Point__c.object
<CustomObject>
    <customHelpPage>FieloPLT__PointHelpBackEnd</customHelpPage>
    <description>Points of each member. Points can increase after a transaction or decrease after a redemption.</description>
    <fields>
        <fullName>FieloPLT__ActionDescription__c</fullName>
        <description>Detail of the action activated by the transaction</description>
        <label>Action Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Balance__c</fullName>
        <formula>IF ( FieloPLT__Points__c &gt; 0 , FieloPLT__Points__c - FieloPLT__PointsUsed__c - 	FieloPLT__PointsExpired__c, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloPLT__ExpirationDate__c</fullName>
        <description>Valid finish date for points</description>
        <label>ExpirationDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FieloPLT__MemberBalance__c</fullName>
        <label>Member Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Member__c</fullName>
        <description>Member who made the transaction</description>
        <label>Member</label>
        <referenceTo>FieloPLT__Member__c</referenceTo>
        <relationshipLabel>Points</relationshipLabel>
        <relationshipName>Points</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FieloPLT__PointsExpired__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Expired</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloPLT__PointsUsed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Points__c</fullName>
        <description>Quantity of points earned with the transaction</description>
        <label>Points</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Promotion activated by the transaction</description>
        <inlineHelpText>Here you can see the promotion that created the point.</inlineHelpText>
        <label>Promotion</label>
        <referenceTo>FieloPLT__Promotion__c</referenceTo>
        <relationshipLabel>Points</relationshipLabel>
        <relationshipName>Points</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Redemption__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Redemption</label>
        <referenceTo>FieloPLT__Redemption__c</referenceTo>
        <relationshipLabel>Points</relationshipLabel>
        <relationshipName>Points</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__RuleDescription__c</fullName>
        <description>Description of rule activated by the transaction</description>
        <label>Rule Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Rule activated by the transaction</description>
        <inlineHelpText>Here you can see the rule that created the point.</inlineHelpText>
        <label>Rule</label>
        <referenceTo>FieloPLT__Rule__c</referenceTo>
        <relationshipLabel>Points</relationshipLabel>
        <relationshipName>Points</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>FieloPLT__Transaction__c</referenceTo>
        <relationshipLabel>Points</relationshipLabel>
        <relationshipName>Points</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Point</label>
    <nameField>
        <displayFormat>P-{0000000}</displayFormat>
        <label>Nombre de Point</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Points</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>